updated src chapter 2

--- a/src.ipynb
+++ b/src.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "install refers to install.py in current directory\n",
+    "install_requirements is one of various functions in install.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,9 +19,18 @@
     "%cd notebooks\n",
     "# from install import *\n",
     "# install_requirements(is_chapter2=True)\n",
-    "\n",
+    "!git clone https://github.com/credamit/nbhfbk.git\n",
+    "%cd nbhfbk\n",
     "from install import *\n",
     "install_requirements(is_chapter2=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here utils refers to utils.py in current directory\n",
+    "setup_chapter is one of the various functions in util.py"
    ]
   },
   {
@@ -27,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "datasets ia a library from hugging face that is downloaded via setup_chapter() from utils.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,6 +58,326 @@
    "source": [
     "from datasets import load_dataset\n",
     "emotions = load_dataset(\"dair-ai/emotion\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "emotions object is of type DataSetDict class from huggingface library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds = emotions[\"train\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retreiver tokenizer associated with transformer model for \"distilbert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "model_ckpt = \"distilbert-base-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_ckpt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking contents of tokenizer retreived from transformer model for \"distilbert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.vocab_size\n",
+    "tokenizer.model_max_length\n",
+    "tokenizer.model_input_names\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A custom function that uses tokenizer retreived from transformer model for \"distilbert-base-uncased\"\n",
+    "This function would provide tokenized value of entire dataset of emotions[\"train\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize(batch):\n",
+    "    return tokenizer(batch[\"text\"], padding=True, truncation=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "emotions_encoded[\"train\"] is tokenized value of emotions[\"train] using tokernizer associated with transformer model \"distilbert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_encoded = emotions.map(tokenize, batched=True, batch_size=None)\n",
+    "print(emotions_encoded[\"train\"].column_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retreiving the model object associated with transformer model named \"distilbert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModel\n",
+    "model_ckpt = \"distilbert-base-uncased\"\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = AutoModel.from_pretrained(model_ckpt).to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A custom function that would be used last_hidden_state using model and tokenizer objects associated with transformer model named \"distilbert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_hidden_states(batch):\n",
+    "    # Place model inputs on the GPU\n",
+    "    inputs = {k:v.to(device) for k,v in batch.items() \n",
+    "              if k in tokenizer.model_input_names}\n",
+    "    # Extract last hidden states\n",
+    "    with torch.no_grad():\n",
+    "        last_hidden_state = model(**inputs).last_hidden_state\n",
+    "    # Return vector for [CLS] token\n",
+    "    return {\"hidden_state\": last_hidden_state[:,0].cpu().numpy()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_encoded.set_format(\"torch\", \n",
+    "                            columns=[\"input_ids\", \"attention_mask\", \"label\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using generic function extract_hidden_state created above to derrive last_hidden_state associated with emotions dataset.\n",
+    "The input provided is tokenized value of emotions dataset using the same tokenizer that is also used by the generic function invoked.\n",
+    "The output is same input dataset returned back after adding one additional column named hidden_state\n",
+    "Value of each hidden_state object contains a numpy object residing in cpu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_hidden = emotions_encoded.map(extract_hidden_states, batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_hidden[\"train\"].column_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating numpy arrays from modified emotions dataset that has additional hidden_state column associated now.\n",
+    "We create arrays for both the training data as well as validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X_train = np.array(emotions_hidden[\"train\"][\"hidden_state\"])\n",
+    "X_valid = np.array(emotions_hidden[\"validation\"][\"hidden_state\"])\n",
+    "y_train = np.array(emotions_hidden[\"train\"][\"label\"])\n",
+    "y_valid = np.array(emotions_hidden[\"validation\"][\"label\"])\n",
+    "X_train.shape, X_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step-1 of 2 to visualize modified emotions dataset having additional hidden_state column associated with it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from umap import UMAP\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Scale features to [0,1] range\n",
+    "X_scaled = MinMaxScaler().fit_transform(X_train)\n",
+    "# Initialize and fit UMAP\n",
+    "mapper = UMAP(n_components=2, metric=\"cosine\").fit(X_scaled)\n",
+    "# Create a DataFrame of 2D embeddings\n",
+    "df_emb = pd.DataFrame(mapper.embedding_, columns=[\"X\", \"Y\"])\n",
+    "df_emb[\"label\"] = y_train\n",
+    "df_emb.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step-2 of 2 to visualize modified emotions dataset having additional hidden_state column associated with it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 3, figsize=(7,5))\n",
+    "axes = axes.flatten()\n",
+    "cmaps = [\"Greys\", \"Blues\", \"Oranges\", \"Reds\", \"Purples\", \"Greens\"]\n",
+    "labels = emotions[\"train\"].features[\"label\"].names\n",
+    "\n",
+    "for i, (label, cmap) in enumerate(zip(labels, cmaps)):\n",
+    "    df_emb_sub = df_emb.query(f\"label == {i}\")\n",
+    "    axes[i].hexbin(df_emb_sub[\"X\"], df_emb_sub[\"Y\"], cmap=cmap,\n",
+    "                   gridsize=20, linewidths=(0,))\n",
+    "    axes[i].set_title(label)\n",
+    "    axes[i].set_xticks([]), axes[i].set_yticks([])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a Classifier Model using LogisticRegression \n",
+    "The Classifier model is trained using data from modified emotions dataset that has additional column hidden_state in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We increase `max_iter` to guarantee convergence \n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr_clf = LogisticRegression(max_iter=3000)\n",
+    "lr_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing output of Classifier model created by comparing its predictions on prediction set with actual values for prediction set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_clf.score(X_valid, y_valid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualising comparison of above output info by using confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
+    "\n",
+    "def plot_confusion_matrix(y_preds, y_true, labels):\n",
+    "    cm = confusion_matrix(y_true, y_preds, normalize=\"true\")\n",
+    "    fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "    disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=labels)\n",
+    "    disp.plot(cmap=\"Blues\", values_format=\".2f\", ax=ax, colorbar=False)\n",
+    "    plt.title(\"Normalized confusion matrix\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "y_preds = lr_clf.predict(X_valid)\n",
+    "plot_confusion_matrix(y_preds, y_valid, labels)"
    ]
   }
  ],
