more modifications to src file

--- a/src.ipynb
+++ b/src.ipynb
@@ -15,8 +15,8 @@
    "outputs": [],
    "source": [
     "# Uncomment and run this cell if you're on Colab or Kaggle\n",
-    "!git clone https://github.com/nlp-with-transformers/notebooks.git\n",
-    "%cd notebooks\n",
+    "# !git clone https://github.com/nlp-with-transformers/notebooks.git\n",
+    "# %cd notebooks\n",
     "# from install import *\n",
     "# install_requirements(is_chapter2=True)\n",
     "!git clone https://github.com/credamit/nbhfbk.git\n",
@@ -126,7 +126,8 @@
    "metadata": {},
    "source": [
     "A custom function that uses tokenizer retreived from transformer model for \"distilbert-base-uncased\"\n",
-    "This function would provide tokenized value of entire dataset of emotions[\"train\"]"
+    "Input is a Dataset object that has a column named \"text\"\n",
+    "This function would provide tokenized value of entire dataset of emotions[\"train\"] for values in its column named \"text\""
    ]
   },
   {
@@ -144,6 +145,13 @@
    "metadata": {},
    "source": [
     "emotions_encoded[\"train\"] is tokenized value of emotions[\"train] using tokernizer associated with transformer model \"distilbert-base-uncased\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First argument of map() function here is a processing function that returns additional column names and values that would be appended to emotions dataset. The enhanced emotions dataset is named as emotions_encoded."
    ]
   },
   {
@@ -214,7 +222,7 @@
    "metadata": {},
    "source": [
     "Using generic function extract_hidden_state created above to derrive last_hidden_state associated with emotions dataset.\n",
-    "The input provided is tokenized value of emotions dataset using the same tokenizer that is also used by the generic function invoked.\n",
+    "The input provided is tokenized value of enhanced emotions dataset using the same tokenizer that is also used by the generic function invoked.\n",
     "The output is same input dataset returned back after adding one additional column named hidden_state\n",
     "Value of each hidden_state object contains a numpy object residing in cpu."
    ]
