annotated src with more comments

--- a/src.ipynb
+++ b/src.ipynb
@@ -5,7 +5,32 @@
    "metadata": {},
    "source": [
     "install refers to install.py in current directory\n",
-    "install_requirements is one of various functions in install.py"
+    "install_requirements is single function in install.py\n",
+    "https://colab.research.google.com/github/nlp-with-transformers/notebooks/blob/main/01_introduction.ipynb\n",
+    "https://colab.research.google.com/github/credamit/nbhfbk/blob/main/01_introduction.ipynb\n",
+    "https://kaggle.com/kernels/welcome?src=https://github.com/credamit/nbhfbk/blob/main/src.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# install.py, install_requirements()\n",
+    "## requirements.txt [TensorFlow, PyTorch, Scikit-learn, matplotlib etc], Git LFS, transformers, datasets\n",
+    "Single function install_requirements from install.py does the following tasks:\n",
+    "1. Uses requirements.txt for all chapters except chapter #7, using below command:\n",
+    "    python -m pip install -r requirements.txt\n",
+    "2. Installs Git LFS, an open source Git extension used to manage large files and binary files in a separate ”LFS store.” It uses below command:\n",
+    "    apt install git-lfs\n",
+    "3. For chapter 2, it additionally installs Hugging face libraries transformers and datasets using below command:\n",
+    "    python -m pip install transformers==4.13.0 datasets==2.8.0\n",
+    "\n",
+    "Contents of requirements.txt common and chapter 2 specific parts are as below:\n",
+    "    transformers[tf,torch,sentencepiece,vision,optuna,sklearn,onnxruntime]==4.16.2\n",
+    "    datasets[audio]==1.16.1\n",
+    "    matplotlib\n",
+    "    ipywidgets\n",
+    "    umap-learn==0.5.1"
    ]
   },
   {
@@ -29,8 +54,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# utils.py, setup_chapter()\n",
     "Here utils refers to utils.py in current directory\n",
-    "setup_chapter is one of the various functions in util.py"
+    "setup_chapter() is the main functions in util.py, It does the following:\n",
+    "1. Checks if GPU is available in current environment or by using below API call for PyTorch\n",
+    "    torch.cuda.is_available()\n",
+    "2. Displays the versions being used for huggingface libraries transformers and datasets being used in current program.\n",
+    "3. Sets Loggging levels to use for both libraries from huggigface\n",
+    "4. Sets plot styles to be used when using matplotlib library in our program\n"
    ]
   },
   {
@@ -47,7 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "datasets ia a library from hugging face that is downloaded via setup_chapter() from utils.py"
+    "# emotions (DatasetDict object): Creation\n",
+    "1. Library used: datasets\n",
+    "2. Function used load_dataset()"
    ]
   },
   {
@@ -64,7 +97,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "emotions object is of type DataSetDict class from huggingface library"
+    "# emotions (DatasetDict object): Review\n",
+    "emotions object is of type DataSetDict class from huggingface library. Lets see its content:"
    ]
   },
   {
@@ -77,19 +111,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_ds = emotions[\"train\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retreiver tokenizer associated with transformer model for \"distilbert-base-uncased\""
+    "# tokenizer (AutoTokenizer object)\n",
+    "Retreive tokenizer associated with transformer model for \"distilbert-base-uncased\" By using:\n",
+    "1. Class AutoTokenizer in huggingface transformers library\n",
+    "2. Method from_pretrained() of Class AutoTokenizer listed above\n"
    ]
   },
   {
@@ -107,7 +135,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking contents of tokenizer retreived from transformer model for \"distilbert-base-uncased\""
+    "In next three cels, let's review various charactertics of tokenizer retreived from transformer model for \"distilbert-base-uncased\".\n",
+    "Here we make use of following attributes from AutoTokenizer class\n",
+    "    1. vocab_size\n",
+    "    2. model_max_length\n",
+    "    3. model_input_names"
    ]
   },
   {
@@ -116,18 +148,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.vocab_size\n",
-    "tokenizer.model_max_length\n",
-    "tokenizer.model_input_names\n"
+    "tokenizer.vocab_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.model_max_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.model_input_names"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# tokenize() function\n",
     "A custom function that uses tokenizer retreived from transformer model for \"distilbert-base-uncased\"\n",
-    "Input is a Dataset object that has a column named \"text\"\n",
-    "This function would provide tokenized value of entire dataset of emotions[\"train\"] for values in its column named \"text\""
+    "    1. This function will later be used as processing function when invoking DatasetDic function map() on emotions DatasetDict object\n",
+    "    2. Input is a Dataset object that has a column named \"text\"\n",
+    "    2. This function expects a column named \"text\" in input DatasetDict object \n"
    ]
   },
   {
@@ -144,14 +194,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "emotions_encoded[\"train\"] is tokenized value of emotions[\"train] using tokernizer associated with transformer model \"distilbert-base-uncased\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First argument of map() function here is a processing function that returns additional column names and values that would be appended to emotions dataset. The enhanced emotions dataset is named as emotions_encoded."
+    "# emotions_encoded (DatasetDict object)\n",
+    "1. First argument of map() function here is a processing function that returns additional column names and values that would be appended to emotions dataset. \n",
+    "2. We name enhanced emotions dataset as emotions_encoded.\n",
+    "3. Two new columns are added \"attention_mask\" and \"input_ids\"\n",
+    "4. emotions DatasetDict had two columns, \"text\" and \"label\". \n",
+    "5. emotions_encoded has four columns"
    ]
   },
   {
@@ -160,7 +208,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emotions_encoded = emotions.map(tokenize, batched=True, batch_size=None)\n",
+    "emotions_encoded = emotions.map(tokenize, batched=True, batch_size=None)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's verify columns in all three Datasets present in DatasetDict object emotions_encoded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "print(emotions_encoded[\"train\"].column_names)"
    ]
   },
@@ -168,7 +229,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retreiving the model object associated with transformer model named \"distilbert-base-uncased\""
+    "print(emotions_encoded[\"validation\"].column_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "print(emotions_encoded[\"test\"].column_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# model (AutoModel object)\n",
+    "Retreiving the model object associated with transformer model named \"distilbert-base-uncased\" by using:\n",
+    "    1. Class AutoModel from transformers library from huggingface\n",
+    "    2. Method from_pretrained() in class AutoModel mentioned above"
    ]
   },
   {
@@ -187,7 +265,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A custom function that would be used last_hidden_state using model and tokenizer objects associated with transformer model named \"distilbert-base-uncased\""
+    "A custom function that would be used last_hidden_state using model and tokenizer objects associated with transformer model named \"distilbert-base-uncased\"\n",
+    "1. It will later be used as processing function when we invoke map() on DatasetDict object emotions_encoded. "
    ]
   },
   {
@@ -221,10 +300,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# emotions_hidden (DatasetDict object)\n",
     "Using generic function extract_hidden_state created above to derrive last_hidden_state associated with emotions dataset.\n",
-    "The input provided is tokenized value of enhanced emotions dataset using the same tokenizer that is also used by the generic function invoked.\n",
-    "The output is same input dataset returned back after adding one additional column named hidden_state\n",
-    "Value of each hidden_state object contains a numpy object residing in cpu."
+    "    1. The input provided is tokenized value of enhanced emotions dataset using the same tokenizer that is also used by the generic function invoked.\n",
+    "    2. The output is same input dataset returned back after adding one additional column named hidden_state\n",
+    "    3. Value of each hidden_state object contains a numpy object residing in cpu."
    ]
   },
   {
@@ -249,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating numpy arrays from modified emotions dataset that has additional hidden_state column associated now.\n",
+    "Creating numpy arrays from modified emotions DatasetDict that has additional hidden_state column associated now.\n",
     "We create arrays for both the training data as well as validation data"
    ]
   },
@@ -272,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step-1 of 2 to visualize modified emotions dataset having additional hidden_state column associated with it."
+    "Step-1 of 2 to visualize modified training dataset having additional hidden_state column associated with it. [Against same six categories of emotions]."
    ]
   },
   {
@@ -299,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step-2 of 2 to visualize modified emotions dataset having additional hidden_state column associated with it."
+    "Step-2 of 2 to visualize modified training dataset having additional hidden_state column associated with it. [Against same six categories of emotions]"
    ]
   },
   {
@@ -328,8 +408,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# LogisticRegression, fit() (a Classifier linear_model from sklearn library)\n",
     "Creating a Classifier Model using LogisticRegression \n",
-    "The Classifier model is trained using data from modified emotions dataset that has additional column hidden_state in it."
+    "    1. The Classifier model is trained using data from modified emotions dataset that has additional column hidden_state in it.\n",
+    "    2. Training is perfomed by supplying modified training dataset and calling fit() method."
    ]
   },
   {
@@ -349,7 +431,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparing output of Classifier model created by comparing its predictions on prediction set with actual values for prediction set."
+    "# LogisticRegression, score() (a Classifier linear_model from sklearn library)\n",
+    "Comparing output of Classifier model created by comparing its predictions on prediction set with actual values for validations set."
    ]
   },
   {
