--- a/src.ipynb
+++ b/src.ipynb
@@ -26,11 +26,11 @@
     "    python -m pip install transformers==4.13.0 datasets==2.8.0\n",
     "\n",
     "Contents of requirements.txt common and chapter 2 specific parts are as below:\n",
-    "    transformers[tf,torch,sentencepiece,vision,optuna,sklearn,onnxruntime]==4.16.2\n",
-    "    datasets[audio]==1.16.1\n",
-    "    matplotlib\n",
-    "    ipywidgets\n",
-    "    umap-learn==0.5.1"
+    "    1. transformers[tf,torch,sentencepiece,vision,optuna,sklearn,onnxruntime]==4.16.2\n",
+    "    2. datasets[audio]==1.16.1\n",
+    "    3. matplotlib\n",
+    "    4. ipywidgets\n",
+    "    5. umap-learn==0.5.1"
    ]
   },
   {
@@ -219,24 +219,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "print(emotions_encoded[\"train\"].column_names)"
+    "emotions_encoded[\"train\"].column_names"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "print(emotions_encoded[\"validation\"].column_names)"
+    "emotions_encoded[\"validation\"].column_names"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "print(emotions_encoded[\"test\"].column_names)"
+    "emotions_encoded[\"test\"].column_names"
    ]
   },
   {
@@ -287,6 +293,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# set_format() [emotions_encoded DatasetDict object]\n",
+    "    1. This method invocation is necessary for immediate next function call to succeed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -314,6 +328,13 @@
    "outputs": [],
    "source": [
     "emotions_hidden = emotions_encoded.map(extract_hidden_states, batched=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's verify that the emotions_hidden has total five columns now."
    ]
   },
   {
